# BildBlitz

./: .gitignore  Cargo.toml  Opus_improvement_implementation_plan.md  POC_implementation_plan.md  Project _BildBlitz_ Prompt Template.md  README.md  benchmark_results.md  cargo_final_warnings.txt  cargo_warnings_full.txt  check_output.txt  check_output_2.txt  gitStarter.bat  out.txt  output.txt  package-lock.json
output/: benchmark_results.csv  benchmark_results.json
src/: app.rs  fs_nav.rs  main.rs  messages.rs
src/engine/: auto_group.rs  benchmark.rs  cache.rs  gallery.rs  loader.rs  mod.rs  prefetch.rs  supported.rs
src/os/: logging.rs  mod.rs  windows.rs
src/server/: mod.rs
src/ui/: audit.rs  auto_group.rs  grid.rs  log_view.rs  mod.rs  navigation.rs  pane_state.rs  tools.rs  viewer.rs
test/: test_linfa.rs
