[package]
name = "BildBlitz"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
eframe = { version = "0.34.2", features = ["default"] }
egui = "0.34.2"
egui_extras = { version = "0.33.3", features = ["image"] }
image = { version = "0.25.10", features = ["default", "avif"] }
moka = { version = "0.12.14", features = ["future"] }
sysinfo = "0.38.4"
tokio = { version = "1.50.0", features = ["full"] }
walkdir = "2.5.0"
anyhow = "1.0"
chrono = "0.4"
opener = { version = "0.7", features = ["reveal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
] }
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
linfa = "0.8.1"
linfa-clustering = "0.8.1"
palette = "0.7.6"
rayon = "1.12.0"
strsim = "0.11.1"
ndarray = "0.16"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
actix-web = "4.9"

img_hash = "3.2.0"
csv = "1.4.0"
